Target Java 17 for Confluent Platform compatibility
- Change maven.compiler.release from 21 to 17 (cp-kafka-connect:7.8.0 ships JDK 17)
- Replace virtual threads with fixed thread pool in ParallelLlmExecutor
- Fix docker-compose volume mount to only expose uber JAR to Connect
- Update CI workflow to use JDK 17

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>